Interim checkin - building javacc files seems to work